log/log_23724211_11.log

CommandNotFoundError: Your shell has not been properly configured to use 'conda activate'.
you might need to `module load miniconda`.


Thu Jul 11 19:42:41 UTC 2024
  File "/nas/cee-water/cjgleason/fiona/narrow_rivers_PIXC/prepNHD.py", line 26
    i = jobarray index: {slurm}
                 ^^^^^
SyntaxError: invalid syntax
Thu Jul 11 19:42:41 UTC 2024
